<resources>
    <string name="app_name">Class Scheduler</string>
    <string name="menu_about">About</string>
    <string name="menu_classes">Classes</string>
    <string name="text_schedule_time">%1$s - %2$s</string>
    <string name="title_error">Error</string>

    <string name="title_monday">Monday</string>
    <string name="title_tuesday">Tuesday</string>
    <string name="title_wednesday">Wednesday</string>
    <string name="title_thursday">Thursday</string>
    <string name="title_friday">Friday</string>
    <string name="title_saturday">Saturday</string>
    <string name="title_sunday">Sunday</string>
    <string name="title_day">Day</string>
    <string name="title_time">Time</string>
    <string name="title_description">Description</string>
    <string name="title_details">Details</string>
    <string name="menu_account">Account</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="text_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="button_edit">Edit</string>
    <string name="button_save">Save</string>
    <string name="text_username">Username</string>
    <string name="text_phone_number">Phone number</string>
    <string name="success_logout">You have logged out successfully.</string>
    <string name="success_login">You have logged in successfully.</string>
    <string name="error_account_update">Something went wrong updating your account.</string>
    <string name="ok">OK</string>
    <string name="success_account_update">Account update successfully.</string>
    <string name="error_login">Something went wrong logging you in.</string>
    <string name="banner_message_login">Please login to sign up for classes</string>
    <string name="text_clear">Clear</string>
    <string name="text_register">Register</string>
    <string name="text_attending">Attending</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="menu_account_edit">Edit</string>
    <string name="text_unregister">Unregister</string>
    <string name="error_generic">Something went wrong, please try again later.</string>
    <string name="text_success">Success</string>
    <string name="text_registered">Registered</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_attend">Attend</string>
    <string name="success_unregister">You have been unregistered from this class</string>
    <string name="success_register">You have been registered for this class</string>
    <string name="success_cancel_attending">Thank you for letting us know you are no longer attending.</string>
    <string name="success_attending">Thanks for letting us know, we will see you there.</string>

    <string name="notification_channel_general">General</string>
    <string name="notification_channel_general_name">General</string>
    <string name="notification_channel_general_description">This is for general notifications</string>
    <string name="text_no">No</string>
    <string name="error_no_attending_users">There are no users attending this class</string>
    <string name="error_no_registered_users">There are no registered users for this class</string>
    <string name="menu_profile_image">Profile Image</string>
    <string name="error_image_select">Something went wrong, please select the image again</string>
    <string name="error_no_profile_image">Something went wrong getting your profile image.</string>
</resources>