<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@+id/classes">

    <fragment
        android:id="@+id/classes"
        android:name="io.smileyjoe.classscheduler.fragment.ClassFragment"
        android:label="@string/menu_classes"/>
    <fragment
        android:id="@+id/about"
        android:name="io.smileyjoe.classscheduler.fragment.AboutFragment"
        android:label="@string/menu_about"/>
    <fragment
        android:id="@+id/account"
        android:name="io.smileyjoe.classscheduler.fragment.AccountFragment"
        android:label="@string/menu_account">
        <argument
            android:name="requires_login"
            android:defaultValue="true" />
        <action
            android:id="@+id/action_account_to_edit"
            app:destination="@id/account_edit"/>
    </fragment>
    <fragment
        android:id="@+id/account_edit"
        android:name="io.smileyjoe.classscheduler.fragment.AccountEditFragment"
        android:label="@string/menu_account_edit"/>
</navigation>