<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/button_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        style="@style/Padding.Default">

        <Button
            android:id="@+id/button_attending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_attending"
            android:layout_marginRight="@dimen/padding_horizontal_default"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:layout_weight="1" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:layout_above="@id/button_wrapper"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="@dimen/class_details_toolbar_height"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleGravity="start"
                app:expandedTitleTextAppearance="@style/Text.Heading.Contrast"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/colorPrimary"
                app:scrimVisibleHeightTrigger="180dp"
                app:scrimAnimationDuration="300"
                app:expandedTitleGravity="center|top"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <RelativeLayout
                    android:id="@+id/layout_toolbar_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="@dimen/class_details_icon_size"
                        android:layout_height="@dimen/class_details_icon_size"
                        app:shapeAppearanceOverlay="@style/circleImageView"
                        app:cardElevation="@dimen/class_details_icon_elevation"
                        app:layout_anchorGravity="bottom|center_horizontal"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="@dimen/class_details_icon_margin_bottom"
                        app:contentPadding="@dimen/class_details_icon_content_padding">

                        <io.smileyjoe.icons.view.IconImageView
                            android:id="@+id/image_icon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:transitionName="icon"
                            style="@style/Icon" />
                    </com.google.android.material.card.MaterialCardView>

                    <View
                        android:id="@+id/view_spacer"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/class_details_toolbar_spacer_height"
                        android:layout_alignParentBottom="true"
                        android:background="?android:colorBackground" />
                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:layout_collapseMode="pin"></androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:transitionName="content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                style="@style/Padding.Default">

                <io.smileyjoe.classscheduler.view.DetailTextView
                    android:id="@+id/detail_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/title_day"
                    app:transition_prefix="day" />

                <io.smileyjoe.classscheduler.view.DetailTextView
                    android:id="@+id/detail_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/title_time"
                    app:transition_prefix="time" />

                <io.smileyjoe.classscheduler.view.DetailTextView
                    android:id="@+id/detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/title_description"
                    app:transition_prefix="description" />

                <io.smileyjoe.classscheduler.view.DetailTextView
                    android:id="@+id/detail_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/title_details"
                    app:transition_prefix="details" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/padding_vertical_default">
                    <io.smileyjoe.classscheduler.view.IconTitleView
                        android:id="@+id/image_attending"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:icon_name="account-check"
                        app:icon_title="@string/text_attending"
                        android:layout_weight="1"/>
                    <io.smileyjoe.classscheduler.view.IconTitleView
                        android:id="@+id/image_registered"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:icon_name="account-question"
                        app:icon_title="@string/text_registered"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>